Fixed aesthetics issue in email list (scrollbar, sticket header, etc..)

--- a/src/EmailList.css
+++ b/src/EmailList.css
@@ -3,6 +3,18 @@
   overflow: scroll;
 }
 
+/* Hides scrollbar for Chrome, Safari and Opera */
+.emailList::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hides scrollbar for IE, Edge, and Firefox */
+.emailList {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+
 .emailList__setting {
   position: sticky;
   top: 0;
@@ -21,4 +33,8 @@
   background-color: white;
   border-bottom: 1px solid whitesmoke;
   z-index: 999;
+}
+
+.emailList__list {
+  padding-bottom: 20px;
 }
